--- a/hw12-solid/build.gradle
+++ b/hw12-solid/build.gradle
@@ -9,6 +9,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.projectlombok:lombok'
+    implementation 'org.projectlombok:lombok'
 }
 
 test {
