--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ allprojects {
         }
         dependencies {
             dependency 'com.google.guava:guava:31.0.1-jre'
+            dependency 'org.projectlombok:lombok:1.18.22'
+            dependency 'org.projectlombok:lombok:1.18.22'
         }
     }
 
